# ParaCL

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  log.txt  main.cpp  tmp  tmp.cpp
.github/workflows/: workflow.yml  workflow.yml.orig
ast/: ASTNode.hh  Expression.hh  INode.hh  Node.hh  PrintVisitor.hh  Statement.hh  Visitor.hh  main  main.cpp
conan/: CMakePresets.json  FindGTest.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  module-GTest-release-x86_64-data.cmake
grammar/: lexer.ll  parser.yy
include/: ast.hh  driver.hh  dsl.hh  interpreter.hh  node.hh
include/detail/: context.hh  dsl.hh  inode.hh  interpreter.hh  types.hh  visitor.hh
parse_gen/: lexer.ll  parser.yy
src/: driver.cpp
unit_tests/: CMakeLists.txt  CMakeLists.txt.orig
unit_tests/data/common/: array_super_multi_dim.ans  comments.ans  local_variables  while_if_logical_mod.ans
unit_tests/src/: unit_tests.cpp
unit_tests/test_utils/include/: test_utils.h  test_utils.hh  test_utils_detail.h  test_utils_detail.hh
utils/include/: log.h  log.hh  utils.h  utils.hh
